# nbites

src/man/: CMakeLists.txt
src/man/corpus/: CameraCalibrate.cpp  CoordFrame.h  CoordFrame4D.cpp  NaoPose.cpp
src/man/include/: NBVector.h
src/man/include/io/: ProtobufMessage.h
src/man/log/: CMakeLists.txt  StreamBroker.cpp  StreamBroker.h
src/man/log/tests/: StreamBrokerTest.cpp
src/man/memory/: MImage.cpp  MImage.h  MObject.h  Memory.cpp  Memory.h
src/man/noggin/: Brain.py  Noggin.cpp  Noggin.h
src/man/noggin/players/: SnapshotStates.py
src/man/vision/: Vision.cpp
src/qtool/: CMakeLists.txt  Makefile
src/qtool/remote/: RobotFinder.cpp
src/qtool/sim/: CMakeLists.txt  PaintWorld.h  SimMain.cpp  SimMain.h  SimView.cpp  SimView.h  WorldModel.h  main.cpp
